# invoice-ocr

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  temporal_worker.py
invoiceocr/app/: admin.py  main.py
invoiceocr/models/: config.py  db.py  schemas.py
invoiceocr/workflows/: activities.py  tasks.py  worker.py  workflows.py
migrations/: env.py
migrations/versions/: 0c11a60ce013_002_add_ocr_fields.py  cdcf8a7b9ff4_001_initial_schema.py
tests/: test_api.py
ui_server/: admin.py  app.py  config.py  db.py  models.py  parser.py  schemas.py  workflows.py
