[project]
name = "invoice-pipeline"
version = "0.1.0"
description = "Invoice processing application"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",
    "sqlalchemy==2.0.49",
    "psycopg[binary]==3.3.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "asyncpg==0.31.0",
    "python-multipart==0.0.26",
]
[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "black",
]