[project]
name = "invoice-pipeline"
version = "0.1.0"
description = "Invoice processing application"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",
    "sqlalchemy==2.0.49",
    "psycopg[binary]==3.3.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "asyncpg==0.31.0",
    "python-multipart==0.0.26",
    "alembic==1.18.4",
    "liteparse==1.2.1",
    "pdf2image==1.17.0",
    "pytest==8.4.2",
    "httpx==0.28.1",
    "sqladmin==0.24.0",
    "temporalio==1.26.0",
    "openai==2.32.0",
    "langfuse==4.5.1",
]
[project.optional-dependencies]
dev = [
    "pytest-asyncio==0.24.0",
    "black",
]